Cambio de titulo

--- a/src/main/resources/espol/poo/topmusical/primary.fxml
+++ b/src/main/resources/espol/poo/topmusical/primary.fxml
@@ -38,7 +38,7 @@
       </VBox>
    </right>
    <top>
-      <Label text="RadioXYZ Top 10" BorderPane.alignment="CENTER">
+      <Label text="Top 10 de canciones" BorderPane.alignment="CENTER">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
